# openipmi-code

lanserv/qct-bmc/: Makefile.am  configure.ac  ipmisim1.emu  lan.conf  qct_mod.c
